# todo-rust-api

./: Cargo.toml
src/: lib.rs  main.rs
src/app/: mod.rs  repository.rs
src/app/usecase/: delete_todo_by_id.rs  get_all_todo.rs  get_todo_by_id.rs  insert_todo.rs  mod.rs  update_todo.rs
src/domain/: mod.rs  todo.rs
src/infra/: mod.rs
src/infra/http/: mod.rs  todo.rs
src/infra/http/todo/: delete_todo_by_id.rs  get_all_todo.rs  get_todo_by_id.rs  insert_todo.rs  mod.rs  update_todo.rs
src/infra/repository/: memory.rs
tests/: delete_todo_by_id_test.rs  get_all_todo_test.rs  get_todo_by_id_test.rs  insert_todo_test.rs  update_todo_test.rs
