[package]
name = "todo-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"